--- a/pharmacieBlazor/_Imports.razor
+++ b/pharmacieBlazor/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using pharmacieBlazor
 @using pharmacieBlazor.Layout
+@using Microsoft.AspNetCore.Components.Authorization
