--- a/pharmacieBlazor/Pages/Index.razor
+++ b/pharmacieBlazor/Pages/Index.razor
@@ -93,6 +93,8 @@
             <a href="/login" class="btn btn-warning">
                 <i class="bi bi-box-arrow-in-right"></i> Se connecter
             </a>
+            <p>Pas encore de compte ? <a href="/register">Créer un compte</a></p>
+
         </div>
     </NotAuthorized>
 </AuthorizeView>
