9bal final final

--- a/pharmacieBlazor/Pages/Medicaments/MedicamentDetails.razor
+++ b/pharmacieBlazor/Pages/Medicaments/MedicamentDetails.razor
@@ -41,8 +41,10 @@ else
                 <dt class="col-sm-3">Dosage:</dt>
                 <dd class="col-sm-9">@medicament.Dosage</dd>
 
-                <dt class="col-sm-3">Ordonnance ID:</dt>
-                <dd class="col-sm-9">@medicament.OrdonnanceId</dd>
+                <dt class="col-sm-3">Quantité:</dt>
+                <dd class="col-sm-9">
+                    <span class="badge bg-info fs-6">@medicament.Quantite unités</span>
+                </dd>
             </dl>
         </div>
         <div class="card-footer">
